# plantYO_UAV

./: .gitignore  README.md  package.xml
config/: hgs_config.yaml
launch/: aha_planta_muda.launch  hgs_planter.launch
models/arbusto_model/: model.config  model.sdf
models/arvore_model/: model.config  model.sdf
models/erva_model/: model.config
python/plantYO_UAV/: CMakeLists.txt  README.md
python/plantYO_UAV/config/: custom_config.yaml  hgs_config.yaml  planter_rviz.rviz
python/plantYO_UAV/dispensor_def/algoritmos/: algoritmo_DAHA.py  algoritmo_HGS.py  algoritmo_NN.py  comp_mode.py
python/plantYO_UAV/docs/: ANALISE_AHA_vs_HGS.md  CHECKLIST_ARTIGO.md  CONFIGURACAO_EXPERIMENTAL.md
python/plantYO_UAV/launch/: blob_detector.launch  dispensor_planter.launch  hgs_planter.launch
python/plantYO_UAV/models/arbusto_model/: model.sdf
python/plantYO_UAV/models/arvore_model/: model.sdf
python/plantYO_UAV/scripts/: analyze_benchmark.py  dispensor_planter_node.py  grid_generator.py  hgs_planter_node.py  joao_tsp_solver.py  mission_logger.py  solver_benchmark.py
python/plantYO_UAV/tmux/: session.yml  session_aha.yml
python/plantYO_UAV/web_app/: app.py  utils.py
python/plantYO_UAV/worlds/: plantyo_farm.world
scripts/: aha_optimizer.py  grid_generator.py  hgs_planter_node.py  hgs_solver.py  joao_tsp_solver.py  mission_logger.py  run_benchmark.py  solver_benchmark.py
tmux/: session.yml  session_aha.yml  start_aha.sh
tmux/config/: simulator.yaml
web_app/: plantio_drone.py
web_app/templates/static/: main.js
worlds/: plantyo_farm.world
(+7 files in other folders)
